- Adjust version info on iOS: add margin top 20px - Fix bug go to wrong page when handle Zappper request

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -18,6 +18,10 @@ span.version-info {
   z-index: 3000;
   color: white;
   font-size: x-small;
+
+  &.margin-top {
+    margin-top: 20px;
+  }
 }
 
 ion-navbar,
